--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,13 @@
     margin: 1.5em 0.6em;
     padding: 0.5em 2.4em;
 }
+
+.dropdown-menu {
+    width: 200px !important;
+    padding: 15px; 
+    padding-bottom: 10px;
+}
+
+.btn-primary{
+    margin: 5px 0px 0px 0px;
+}
